tests/paczka2/big_fuzzy/77956092.err
Error in line 1: nrK A328 67,7
Error in line 13: sPgJ S484 80,28
Error in line 20: sPgJ S484 365,5
Error in line 23: sPgJ S20 7,7
Error in line 29: wm5 S619 27,3
Error in line 30: wm5 S20 3,8
Error in line 24: sPgJ S619 28,0
Error in line 10: nrK S484 0,0
Error in line 45: eOd8Wt0 S484 96,8
Error in line 47: QHY S=19 155,7
Error in line 44: sPgJ A328 28,5
Error in line 49: wm5 S619 77,3
Error in line 54: uIPpyYD2mkv S20 301,7
Error in line 58: eOd8Wt0 S619 77,4
Error in line 55: uIPpyYD2mkv S484 25,0
Error in line 73: wm5 S20 70,1
Error in line 76: eOd8Wt0 S619 19,9
Error in line 74: wm5 S484 72,3
Error in line 81: wm5 S619 52,1
Error in line 83: S484 S619 -3,1
Error in line 87: eOd8Wt0 S619 -1,8
Error in line 88: S484 S484 54,0
Error in line 82: wm5 S20 69,0
Error in line 42: QHY S619 59,2
Error in line 85: eOd8Wt0 S619 24,5
Error in line 91: S484 S20 44,0
Error in line 112: nrK A328 141,1
Error in line 114: sPgJ A328 42,6
Error in line 119: QHY S20 56,9
Error in line 128: S484 A328 35,6
Error in line 137: nrK S484 20,5
Error in line 133: wm5 S20 33,5
Error in line 140: sPgJ S484 34,2
Error in line 149: eOd8Wt0 S20 89,6
Error in line 148: sPgJ S20 69,6
Error in line 139: nrK S20 23,6
Error in line 160: eOd8Wt0 S20 9,3
Error in line 167: eOd8Wt0 S484 83,4
Error in line 180: uIPpyYD2mkv S20 42,6
Error in line 183: nrK S619 81,09
Error in line 181: uIPpyYD2mkv S484 34,4
Error in line 207: eOd8Wt0 A328 53,9
Error in line 208: uIPpyYD2mkv S20 95,2
Error in line 185: nrK S619 160,5
Error in line 227: nrK S484 97,7
Error in line 219: eOd8Wt0 S484 69,5
Error in line 214: sPgJ S619 18,9
Error in line 246: wm5 S20 76,5
